--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "webpack-dev-server": "^4.9.0"
     },
     "dependencies": {
+        "@module-federation/typescript": "^2.1.3",
         "node-polyfill-webpack-plugin": "^2.0.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
